--- a/src/index.scss
+++ b/src/index.scss
@@ -4,16 +4,18 @@
 
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 html {
   font-size: 62.5%;
 }
 body {
+  background-color: #ffffff;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Fredoka One", cursive;
+  font-family: "Poppins", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
