firebaseauthを用いてログイン機能を追加

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@ body {
   margin: 0;
   font-family: "Fredoka One", cursive;
   font-family: "Poppins", sans-serif;
+  font-family: "M PLUS Rounded 1c";
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
