商品のレイアウトを追加

--- a/src/routes/navigaiton/navigation.style.scss
+++ b/src/routes/navigaiton/navigation.style.scss
@@ -3,6 +3,7 @@
   height: 8rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 4rem 0 4rem;
   margin-top: 1.5rem;
   margin-bottom: 1.8rem;
@@ -25,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    gap: 20px;
   }
 
   .nav-link {
