firestoreからJSONデータを格納　格納したデータからショップのコンポーネントを構築するように変更した useParamsを用いてルーティングの設定を更新した

--- a/src/component/category-preview/category-preview.scss
+++ b/src/component/category-preview/category-preview.scss
@@ -4,6 +4,10 @@
     margin: 0 auto 2rem auto;
     font-size: 3rem;
     font-weight: bold;
+    span {
+      cursor: pointer;
+      color: darkcyan;
+    }
   }
   & .shop-grid-container {
     width: 95%;
